LSP: fix MinGW build

Fixes: QTCREATORBUG-25544
Change-Id: I2380fd020bb117cdfbb043ced73b885400d26985
Reviewed-by: Christian Stenger <christian.stenger@qt.io>